updated font weight

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ header h2 {
 	margin-bottom: 10px;
 	color: black;
 	font-family: "Roboto", Helvetica, Arial, sans-serif;
+	font-weight:lighter;
 }
 
 #lower-image {
